--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   app:
     build: .
-    container_name: simple-python-server
+    container_name: api_service
     command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
     ports:
       - 8080:80
