adjusting file structure

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ services:
   app:
     build: .
     container_name: api_service
-    command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
+    command: uvicorn src.main:app --host 0.0.0.0 --port 80 --reload
     ports:
       - 8080:80
     volumes:
-      - .:/app
+      - .:/api_service
