many many many updates

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   app:
     build: .
     container_name: api_service
-    command: uvicorn src.main:app --host 0.0.0.0 --port 80 --reload
+    command: python -m src
     ports:
       - 8080:80
     volumes:
